修改目录结构，让页面相关文件至同一目录下

--- a/src/clients/element/template.html
+++ b/src/clients/element/template.html
@@ -7,6 +7,12 @@
 <body>
     <section class="container">
         <h2>test</h2>
+        <p>
+            <i class="icon icon-1"></i>
+            <i class="icon icon-2"></i>
+            <i class="icon icon-3"></i>
+            <i class="icon icon-4"></i>
+        </p>
         <ul class="nav nav-pills nav-stacked">
             <li class="active"><a href="#">测试1</a></li>
             <li><a href="#">测试2</a></li>
